# totalreqall

./: .astylerc  .clang-format  .gitignore  .gitmodules  .restyled.yaml  .travis.yml  AppInfo.h  AppInfo.h.cmake  Bible.cpp  Bible.h  BibleMemory.cpp  BibleProcessor.cpp  CHANGELOG.md  CMakeLists.txt  ChangelogDialog.cpp  ChangelogDialog.h  ChooseReferenceWidget.cpp  ChooseReferenceWidget.h  CustomContentAdder.cpp  CustomContentAdder.h  MainWindow.cpp  MainWindow.h  MarkdownDialog.cpp  MarkdownDialog.h  MemorizeEdit.cpp  MemorizeEdit.h  MemorizeWidget.cpp  MemorizeWidget.h  Messages.sh  README.md  SavedContentLoader.cpp  SavedContentLoader.h  SettingsDialog.cpp  SettingsDialog.h  SimpleRefChooser.cpp  SimpleRefChooser.h  TotalReqall.pro  TotalReqall_en_US.ts  UserSettings.cpp  UserSettings.h  (+15 more)
.github/workflows/: build.yml
bible-memory/: LICENSE  build.bat
cmake/: AppInfo.h  Findsword.cmake
docs/: index.md  screenshots.md
docs/binaries/: index.md
docs/help/: index.md
resources/icons/: TotalReqall.icns
src/: ChooseReferenceWidget.cpp  ChooseReferenceWidget.h  CustomContentAdder.cpp  CustomContentAdder.h  Helper.cpp  Helper.h  MainWindow.cpp  MainWindow.h  MemorizeWidget.cpp  MemorizeWidget.h  SavedContentLoader.cpp  SavedContentLoader.h  SettingsDialog.cpp  SettingsDialog.h  SimpleRefChooser.cpp  SimpleRefChooser.h  UserSettings.cpp  UserSettings.h  WelcomePage.h  main.cpp
